; ModuleID = '/home/carl/AnghaBench/git/extr_blame.c_num_scapegoats.c'
source_filename = "/home/carl/AnghaBench/git/extr_blame.c_num_scapegoats.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rev_info = type { i32 }
%struct.commit = type { i32 }
%struct.commit_list = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.rev_info*, %struct.commit*, i32)* @num_scapegoats to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @num_scapegoats(%struct.rev_info* %0, %struct.commit* %1, i32 %2) #0 {
  %4 = alloca %struct.rev_info*, align 8
  %5 = alloca %struct.commit*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.commit_list*, align 8
  store %struct.rev_info* %0, %struct.rev_info** %4, align 8
  store %struct.commit* %1, %struct.commit** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load %struct.rev_info*, %struct.rev_info** %4, align 8
  %9 = load %struct.commit*, %struct.commit** %5, align 8
  %10 = load i32, i32* %6, align 4
  %11 = call %struct.commit_list* @first_scapegoat(%struct.rev_info* %8, %struct.commit* %9, i32 %10)
  store %struct.commit_list* %11, %struct.commit_list** %7, align 8
  %12 = load %struct.commit_list*, %struct.commit_list** %7, align 8
  %13 = call i32 @commit_list_count(%struct.commit_list* %12)
  ret i32 %13
}

declare dso_local %struct.commit_list* @first_scapegoat(%struct.rev_info*, %struct.commit*, i32) #1

declare dso_local i32 @commit_list_count(%struct.commit_list*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
